kubernetes/apps/default/authelia/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-deangalvin-com
  namespace: networking
  annotations:
    hajimari.io/enable: "false"
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &public_host "auth.deangalvin.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80
  tls:
    - hosts:
        - *public_host
      secretName: deangalvin-com-production-tls
